--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pratyush Suvarna</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-
+    <div id="profile">
+        <h2>Pratyush Suvarna</h2>
+        <h3>Student at BITS Pilani, Goa Campus</h3>
+    </div>
+    <div id="about">
+        <p>I am a Computer Science student in his first year enthusiastically looking forward to learn new skills. I
+            enjoy touch typing in my pasttime and average out at <a
+                href="https://data.typeracer.com/pit/profile?user=rifterk">70 WPM</a> </p>
+    </div>
 </body>
 
 </html>
