--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <body>
     <div id="profile">
         <h2>Pratyush Suvarna</h2>
-        <h3>Student at BITS Pilani, Goa Campus</h3>
+        <h3> Student at <a href="https://www.bits-pilani.ac.in/goa/">BITS Pilani, Goa Campus</a> </h3>
     </div>
     <div id="about">
         <p>I am a Computer Science student in his first year enthusiastically looking forward to learn new skills. I
             enjoy touch typing in my pasttime and average out at <a
-                href="https://data.typeracer.com/pit/profile?user=rifterk">70 WPM</a> </p>
+                href="https://data.typeracer.com/pit/profile?user=rifterk">70 WPM</a>.
+        <p>
+        <p>I am currently learning Web Developement and also enjoy solving CTF problems (particularly web related).</p>
     </div>
+
 </body>
 
 </html>
