--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 </head>
 
 <body>
-    <div id="profile">
-        <h2>Pratyush Suvarna</h2>
-        <h3> Student at <a href="https://www.bits-pilani.ac.in/goa/">BITS Pilani, Goa Campus</a> </h3>
+    <div class="top">
+        <img class="cat1" src="/cat (1).png" alt="">
+        <img class="pp" src="/2021A7PS1440G.jpg" alt="XYZ">
+        <img class="keyboard" src="/keyboard.png" alt="">
+        <h1>XYZ</h1>
+        <div class="aboutme">
+            <h2>About me</h2>
+            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, quidem dolorem. Quisquam explicabo quae placeat. Ea, rem, eaque a fugit modi harum quasi sint illo recusandae corrupti voluptates doloremque numquam.</h1>
+        </div>
     </div>
-    <div id="about">
-        <p>I am a Computer Science student in his first year enthusiastically looking forward to learn new skills. I
-            enjoy touch typing in my pasttime and average out at <a
-                href="https://data.typeracer.com/pit/profile?user=rifterk">70 WPM</a>.
-        <p>
-        <p>I am currently learning Web Developement and also enjoy solving CTF problems (particularly web related).</p>
-    </div>
-
+    
 </body>
 
 </html>
