--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
 
 <body>
     <div class="top">
-        <img class="cat1" src="/cat (1).png" alt="">
-        <img class="pp" src="/2021A7PS1440G.jpg" alt="XYZ">
+        <img class="cat1" src="/cat_1.png" alt="">
+        <img class="pp" src="/pfp.jpg" alt="XYZ">
         <img class="keyboard" src="/keyboard.png" alt="">
-        <h1>XYZ</h1>
+        <h1>Pratyush Suvarna</h1>
         <div class="aboutme">
             <h2>About me</h2>
-            <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat, quidem dolorem. Quisquam explicabo quae placeat. Ea, rem, eaque a fugit modi harum quasi sint illo recusandae corrupti voluptates doloremque numquam.</h1>
+            <h3>I am a Computer Science student in his first year studying in <a
+                    href="https://www.bits-pilani.ac.in/goa/" target="_blank">BITS Pilani, Goa Campus.</a>
+                I enjoy learning new skills and I'm currently learning web development! I also enjoy touch typing and
+                average out at <a href="https://data.typeracer.com/pit/profile?user=rifterk" target="_blank">75 WPM!</a>
+                </h1>
         </div>
     </div>
-    
+
 </body>
 
 </html>
