--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pratyush Suvarna</title>
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://kit.fontawesome.com/cdd1bfd536.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,7 +25,20 @@
                 </h1>
         </div>
     </div>
+    <div class="bottom">
+        <ul>
+            <li><a class="insta" href="https://www.instagram.com/xpratyushx/" target="_blank"> <i
+                        class="fa-brands fa-instagram"></i></a></li>
+            <li> <a class="twitter" href="https://twitter.com/xpratyushx" target="_blank"><i
+                        class="fa-brands fa-twitter"></i></a> </li>
+            <li> <a class="fb" href="https://github.com/RiftK" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </li>
+            <li> <a class="linkedin" href="https://www.linkedin.com/in/pratyush-s-b38532219/" target="_blank"><i
+                        class="fa-brands fa-linkedin"></i></a>
+            </li>
 
+        </ul>
+    </div>
 </body>
 
 </html>
